fix/align

--- a/src/components/organisms/Footer/footer.module.scss
+++ b/src/components/organisms/Footer/footer.module.scss
@@ -12,7 +12,7 @@
 
     @media (min-width: 1440px) {
         gap: 180px;
-        max-width: 1068px;
+        max-width: 1048px;
         margin-bottom: 0;
     }
 
